--- a/package.json
+++ b/package.json
@@ -1,25 +1,1 @@
-{
-  "name": "godrej-properties---digital-asset-manager",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "@google/genai": "^1.29.0",
-    "xlsx": "^0.18.5",
-    "file-saver": "^2.0.5",
-    "exceljs": "^4.4.0"
-  },
-  "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
-  }
-}
+{"name":"react-typescript-vite-starter","version":"1.0.0","type":"module","dependencies":{"@google/genai":"^1.29.0","exceljs":"^4.4.0","file-saver":"^2.0.5","react":"^19.2.0","react-dom":"^19.2.0","xlsx":"^0.18.5","uuid":"^9.0.1"},"devDependencies":{"@types/react":"^18.2.33","@types/react-dom":"^18.2.14","@types/uuid":"^9.0.7"}}
